src/style/controls.scss
@import './variables.scss';

.controls {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: $margin-m;
	z-index: 2;
	box-shadow: -4px calc(0px - $margin-xs) $margin-xs 0 $background;

	.shuffle,
	.playback,
	.spotify {
		display: flex;
		flex-direction: row;
		justify-content: center;
		gap: $margin-m;
	}

	& > div {
		width: 100%;
		display: flex;
		flex-direction: column;
		gap: $margin-m;
		align-items: center;
		justify-content: space-between;

		> * {
			width: calc(100% - (2 * $margin-m));
		}

		.spotify {
			align-items: center;

			color: $text;
			text-decoration: none;
			font-size: $h4;
			font-weight: bold;

			img {
				height: 40px;
			}
		}
	}
}

@media screen and (min-width: 450px) {
	.controls > div > * {
		width: 400px;
	}
}

@media screen and (min-width: 900px) {
	.controls {
		padding: $margin-m;

		& > div {
			flex-direction: row;
			gap: 0px;

			.spotify {
				justify-content: right;
			}
		}
	}
}

